Update github actions example

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,5 +14,7 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
-      - name: Build and test with Gradle
-        run: ./gradlew build test
+      - name: Build with Gradle
+        run: ./gradlew build
+      - name: Test with Gradle
+        run: ./gradlew test
